8007606: Handle realloc() failure in unix/native/libnet/net_util_md.c correctly

Reviewed-by: clanger, mbaesken